@@ -1,4 +1,3 @@
 #!/bin/sh
 source common.sh || exit 1
-run_test "away handler" "../src/herdstat -L . -a beu" \
-    away away.expected
+run_herdstat "away handler" "-a beu" away away.expected
