@@ -1,4 +1,3 @@
 #!/bin/sh
 source common.sh || exit 1
-run_test "dev handler" "../src/herdstat -L . -d ka0ttic" \
-    dev dev.expected
+run_herdstat "dev handler" "-d ka0ttic" dev dev.expected
