@@ -1,0 +1,2 @@
+app-lala/foomatic
+app-misc/foo
