@@ -1,4 +1,3 @@
 #!/bin/sh
 source common.sh || exit 1
-run_test "herd handler" "../src/herdstat -L . netmon" \
-    herd herd.expected
+run_herdstat "herd handler" "netmon" herd herd.expected
