@@ -1,0 +1,13 @@
+app-lala/foomatic
+foo
+none
+
+app-misc/foo
+foo
+ka0ttic@gentoo.org
+
+sys-ignore/fefifofum
+No metadata.xml
+
+sys-libs/libfoo
+No metadata.xml
