@@ -1,3 +1,3 @@
-tests/foo
+app-misc/foo
 foo
 ka0ttic@gentoo.org
