@@ -1,4 +1,3 @@
 #!/bin/sh
 source common.sh || exit 1
-run_test "stats handler" "../src/herdstat -L ." \
-    stats stats.expected
+run_herdstat "stats handler" "" stats stats.expected
